Fix spacing of comments form

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,6 +55,10 @@ p {
   background: #57cbcc;
 }
 
+hr {
+  border-top: 1px solid rgba(255,255,255,.1);
+}
+
 figure {
   margin: 0;
 }
@@ -1570,6 +1574,24 @@ a:hover {
 
 /* Staticman Comments */
 
+#staticman-form:before {
+  display: block;
+  height: 90px;
+  margin-top: -90px;
+  visibility: hidden;
+  content: "";
+}
+
+@media (max-width: 768px) {
+  #staticman-form:before {
+    display: block;
+    height: 80px;
+    margin-top: -80px;
+    visibility: hidden;
+    content: "";
+  }
+}
+
 .post-comment {
   background-color: #292f36;;
   padding: 20px;
@@ -1615,10 +1637,6 @@ a:hover {
 
 input#e-mail, #hidden_iframe {
   display: none;
-}
-
-.mb--50 {
-  margin-bottom: -50px;
 }
 
 /*=================================================================
